Edited README via GitHub

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This file was created by PyCharm 1.2 for binding GitHub repository
+This project has been rolled into the Sphere Automation project here: https://github.com/buzzdavidson/Sphere-Automation
